--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# other
+*.DS_Store
+*~
+*.bak
+*.swp
+*.iml
+target/
+build/
+.idea/
+
