--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,190 @@
           <useMissingFile>true</useMissingFile>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>com.github.fracpete</groupId>
+        <artifactId>debian-maven-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+          <packageName>${project.name}</packageName>
+          <packageTitle>Happy ADAMS application</packageTitle>
+          <packageVersion>${project.version}</packageVersion>
+          <projectUrl>${project.url}</projectUrl>
+          <packageDescription>ADAMS application for the Happy framework.</packageDescription>
+          <createSymLinks>false</createSymLinks>
+          <createIncludeFiles>false</createIncludeFiles>
+          <fileFiltering>
+            <enabled>true</enabled>
+          </fileFiltering>
+          <excludeArtifactsRegExp>
+            <param>.*-osx-x86.*</param>
+            <param>.*-win-x86.*</param>
+            <param>.*:android-arm</param>
+            <param>.*:android-arm64</param>
+            <param>.*:android-x86</param>
+            <param>.*:android-x86_64</param>
+            <param>.*:ios-arm64</param>
+            <param>.*:ios-x86_64</param>
+            <param>.*:linux-x86</param>
+            <param>.*:linux-ppc64le</param>
+            <param>.*:macosx-x86_64</param>
+            <param>.*:windows-x86</param>
+            <param>.*:windows-x86_64</param>
+            <param>.*:linux-armhf</param>
+            <param>.*:rsync4j-windows-x86:.*</param>
+            <param>.*:scripts</param>
+          </excludeArtifactsRegExp>
+          <useDefaultCopyResources>false</useDefaultCopyResources>
+          <copyResources>
+            <copyResource>
+              <source>${project.basedir}/target/scripts-debian/debian-gui</source>
+              <target>${project.basedir}/target/deb/usr/bin/${project.name}-gui</target>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/scripts-debian/debian-daemon</source>
+              <target>${project.basedir}/target/deb/usr/bin/${project.name}-daemon</target>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/scripts-debian/debian-exec</source>
+              <target>${project.basedir}/target/deb/usr/bin/${project.name}-exec</target>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/scripts-debian/debian-gui.svg</source>
+              <target>${project.basedir}/target/deb/usr/share/pixmaps/${project.name}.svg</target>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/scripts-debian/debian-gui.desktop</source>
+              <target>${project.basedir}/target/deb/usr/share/applications/${project.name}.desktop</target>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/sources</source>
+              <target>${project.basedir}/target/deb/usr/lib/${project.name}/src</target>
+              <include>.*\.jar</include>
+            </copyResource>
+            <copyResource>
+              <source>${project.basedir}/target/doc/docs</source>
+              <target>${project.basedir}/target/deb/usr/share/doc/${project.name}</target>
+            </copyResource>
+          </copyResources>
+          <useDefaultFixPermissions>true</useDefaultFixPermissions>
+          <packageDependencies>
+            <packageDependency>openjdk-11-jre | openjdk-11-jre-headless</packageDependency>
+          </packageDependencies>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>com.github.fracpete</groupId>
+        <artifactId>rpm-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>rpm</goal>
+            </goals>
+            <configuration>
+              <skip>false</skip>
+              <attach>false</attach>
+              <entries>
+                <entry>
+                  <file>${project.basedir}/target/scripts-debian/debian-gui</file>
+                  <name>/usr/bin/${project.name}-gui</name>
+                  <user>root</user>
+                  <group>root</group>
+                  <mode>0755</mode>
+                  <filterFile>true</filterFile>
+                </entry>
+                <entry>
+                  <file>${project.basedir}/target/scripts-debian/debian-daemon</file>
+                  <name>/usr/bin/${project.name}-daemon</name>
+                  <user>root</user>
+                  <group>root</group>
+                  <mode>0755</mode>
+                  <filterFile>true</filterFile>
+                </entry>
+                <entry>
+                  <file>${project.basedir}/target/scripts-debian/debian-exec</file>
+                  <name>/usr/bin/${project.name}-exec</name>
+                  <user>root</user>
+                  <group>root</group>
+                  <mode>0755</mode>
+                  <filterFile>true</filterFile>
+                </entry>
+                <entry>
+                  <file>${project.basedir}/target/scripts-debian/debian-gui.svg</file>
+                  <name>/usr/share/pixmaps/${project.name}.svg</name>
+                  <user>root</user>
+                  <group>root</group>
+                  <mode>0644</mode>
+                  <filterFile>false</filterFile>
+                </entry>
+                <entry>
+                  <file>${project.basedir}/target/scripts-debian/debian-gui.desktop</file>
+                  <name>/usr/share/pixmaps/${project.name}.desktop</name>
+                  <user>root</user>
+                  <group>root</group>
+                  <mode>0644</mode>
+                  <filterFile>true</filterFile>
+                </entry>
+                <entry>
+                  <collect>
+                    <from>${project.basedir}/target</from>
+                    <includes>
+                      <include>${project.artifactId}-${project.version}.jar</include>
+                    </includes>
+                  </collect>
+                  <name>/usr/lib/${project.name}</name>
+                </entry>
+                <entry>
+                  <collect>
+                    <from>${project.basedir}/target</from>
+                    <includes>
+                      <include>${project.artifactId}-${project.version}-sources.jar</include>
+                    </includes>
+                  </collect>
+                  <name>/usr/lib/${project.name}/src</name>
+                </entry>
+                <entry>
+                  <collect>
+                    <from>${project.basedir}/target/linux-jars</from>
+                  </collect>
+                  <name>/usr/lib/${project.name}</name>
+                </entry>
+                <entry>
+                  <collect>
+                    <from>${project.basedir}/target/sources</from>
+                  </collect>
+                  <name>/usr/lib/${project.name}/src</name>
+                </entry>
+                <entry>
+                  <collect>
+                    <from>${project.basedir}/target/doc/docs</from>
+                  </collect>
+                  <name>/usr/share/doc/${project.name}</name>
+                </entry>
+              </entries>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <signature>
+            <skip>true</skip>
+          </signature>
+        </configuration>
+      </plugin>
+
+      <!--plugin>
+        <groupId>nz.ac.waikato.cms.adams</groupId>
+        <artifactId>adams-maven-plugin</artifactId>
+        <version>${adams.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>classlister</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin-->
     </plugins>
   </build>
 </project>
