added support for spy-utilities commands; added ability to override global pull behavior in local commands via pullType option

--- a/src/main/resources/adams/core/ClassLister.props
+++ b/src/main/resources/adams/core/ClassLister.props
@@ -6,6 +6,10 @@
 #
 # Author:  FracPete (fracpete at waikato dot ac dot nz)
 
-# the GDAL programs
-adams.gdal.GDALCommand=\
-  adams.gdal
+# the GDAL commands
+adams.core.command.gdal.GDALCommand=\
+  adams.core.command.gdal
+
+# the SPy (spectral python) commands
+adams.core.command.spy.SPyCommand=\
+  adams.core.command.spy
