--- a/pom.xml
+++ b/pom.xml
@@ -438,7 +438,7 @@
         </configuration>
       </plugin>
 
-      <!--plugin>
+      <plugin>
         <groupId>nz.ac.waikato.cms.adams</groupId>
         <artifactId>adams-maven-plugin</artifactId>
         <version>${adams.version}</version>
@@ -446,10 +446,11 @@
           <execution>
             <goals>
               <goal>classlister</goal>
+              <goal>optionlister</goal>
             </goals>
           </execution>
         </executions>
-      </plugin-->
+      </plugin>
 
       <plugin>
         <groupId>org.owasp</groupId>
